k8s/base/simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simulator
  template:
    metadata:
      labels:
        app: simulator
    spec:
      containers:
        - name: simulator
          image: my-app/simulator:dev
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
